--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -1,7 +1,14 @@
+canvas {
+  width: 100vw;
+  height: 100vh;
+  margin: 0;
+  padding: 0;
+}
 html {
   font-family: sans-serif;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
+  background-color: black;
 }
 body {
   margin: 0;
