--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -225,16 +225,8 @@ img {
   padding-top: 0;
   margin-bottom: 1.45rem;
 }
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-li,
-label,
-select,
-footer {
+*,
+select {
   font-weight: normal;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
