--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -612,6 +612,9 @@ pre tt:before,
 pre tt:after {
   content: "";
 }
+.statsBox__container {
+  padding-right: 2rem;
+}
 @media only screen and (max-width: 480px) {
   html {
     font-size: 100%;
@@ -621,6 +624,12 @@ pre tt:after {
 @media (max-width: 900px) {
   main {
     flex-direction: column;
+  }
+  .index__innerContainer {
+    flex-direction: column;
+  }
+  .statsBox__container {
+    padding: 0;
   }
   canvas {
     height: 400px;
