design :  made new layout

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -1,5 +1,6 @@
 canvas {
-  background-color: #212121;
+  /* background-color: #212121; */
+  background-color: black;
 }
 html {
   /* font-family: sans-serif; */
