design: design changes

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -1,6 +1,7 @@
 canvas {
   /* background-color: #212121; */
   background-color: black;
+  outline: none;
 }
 html {
   /* font-family: sans-serif; */
